KSBWI-277 Fix ios layout issue

--- a/src/scss/widget/_general.scss
+++ b/src/scss/widget/_general.scss
@@ -5,11 +5,11 @@
 }
 
 .anim-fade-in.ng-enter.ng-enter-active {
-   opacity: 1;
-   -webkit-animation: zoomIn 0.1s;
+   animation: zoomIn 0.1s;
    -moz-animation: zoomIn 0.1s;
    -ms-animation: zoomIn 0.1s;
-   animation: zoomIn 0.1s;
+   -webkit-animation: zoomIn 0.1s;
+   opacity: 1;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
 }
@@ -25,4 +25,9 @@
       transition-duration: 0s;
       -webkit-transition-duration: 0s;
    }
+}
+
+html {
+   min-width: 100%;
+   width: 1px;
 }
